--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "disquirer.js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "files": ["lib/**/*"],
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "ava-ts test/ --serial --verbose",
     "test-automatic": "ava-ts --serial --verbose --match \"Check*\"",
