Fix bug where multiple people could not respond to same Disquirer. Enabled adding embed instead of plain text.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "declaration": true,
         "outDir": "./lib"
     },
-    "exclude": ["test/"]
+    "exclude": ["test/"],
+    "include": ["src/"]
     //"include": ["./server.ts", "./src"]
 }
