--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "disquirer.js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "main": "lib/index.js",
   "files": [
@@ -44,5 +44,6 @@
   },
   "peerDependencies": {
     "discord.js": "^12.0.0"
-  }
+  },
+  "repository": "https://github.com/LapinoLapidus/disquirer.js"
 }
