--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "disquirer.js",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "main": "lib/index.js",
   "files": [
@@ -28,9 +28,7 @@
     "discord": "LapinoLapidus#3262"
   },
   "license": "MIT",
-  "dependencies": {
-    "number-to-words": "^1.2.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^12.12.7",
     "ava-ts": "^0.25.2",
@@ -43,7 +41,7 @@
     "typescript": "^3.7.2"
   },
   "peerDependencies": {
-    "discord.js": "^12.0.0"
+    "discord.js": "^11.5.1"
   },
   "repository": "https://github.com/LapinoLapidus/disquirer.js"
 }
